src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Backup_Data_Owner_Name__c</fullName>
        <description>For name of backup data owner</description>
        <label>Backup Data Owner Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Data_Owner_coreID__c</fullName>
        <description>coreid of backup data owner</description>
        <label>Backup Data Owner coreID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoreID__c</fullName>
        <description>Field for coreID</description>
        <label>CoreID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_owner_Name__c</fullName>
        <description>Name of Data owner</description>
        <label>Data owner Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_owner_coreID__c</fullName>
        <description>creid of data owner.</description>
        <label>Data owner coreID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DelegatedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please assign delegate contact, In case Contact person is on leave</description>
        <inlineHelpText>Please assign delegate contact, In case Contact person is on leave</inlineHelpText>
        <label>Delegated Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>To describe the division</description>
        <label>Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <description>To describe the number of the employee.</description>
        <label>Employee Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_title__c</fullName>
        <label>Form title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeaveFrom__c</fullName>
        <description>This field is used when contact person is on leave</description>
        <inlineHelpText>This field is used when contact person is on leave</inlineHelpText>
        <label>Leave From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeaveTo__c</fullName>
        <description>This field is used when contact person is on leave</description>
        <inlineHelpText>This field is used when contact person is on leave</inlineHelpText>
        <label>Leave To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_Nmae__c</fullName>
        <label>Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <description>To describe the employee manager.</description>
        <label>Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <description>To describe the profile.</description>
        <label>Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsibility__c</fullName>
        <label>Responsibility</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>To describe the role</description>
        <label>Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <label>Supervisor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>To describe the title.</description>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TypeofContact__c</fullName>
        <formula>IF(  Account.Id != Null ,&apos;External&apos; , &apos;Internal&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Function__c</fullName>
        <label>User Function</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isInternal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Contact</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>LDAP_Page</fullName>
        <active>true</active>
        <label>LDAP Page</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SPE_Email_Id_Required</fullName>
        <active>true</active>
        <description>Email is required to create contact</description>
        <errorConditionFormula>ISBLANK( Email )</errorConditionFormula>
        <errorMessage>Email Ids is required to create contact</errorMessage>
    </validationRules>
</CustomObject>